--- a/module-1-layout/03-layout-3/styles.css
+++ b/module-1-layout/03-layout-3/styles.css
@@ -16,10 +16,379 @@ section{
   margin: 10px;
 }
 
-section.overflow{
-  display: inline-block;
-}
-
 section:hover{
   background-color: lightpink
+}
+
+/*****************************/
+.grid-container {
+  display: grid;
+}
+
+.grid-container div{
+  border: 1px solid darkblue;
+}
+
+
+.grid-container1 {
+  display: grid;
+  grid-template-columns: repeat(2, 100px) 200px;
+  grid-template-rows: repeat(2, 100px) ;
+}
+
+.grid-container1 div{
+  border: 1px solid darkblue;
+}
+
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(2, 200px);
+  grid-template-rows: 100px 200px;
+}
+
+.grid-container2 div{
+  border: 1px solid darkblue;
+}
+
+.grid-container3 {
+  height: 100vh;
+  box-sizing: border-box; /* para no tener en cuenta el border en el ancho del elemento */
+  display: grid;
+  grid-template-columns: 40px 50px auto 50px 40px; 
+  grid-template-rows: 25% 100px auto;
+}
+
+.grid-container3 div{
+  border: 1px solid darkblue;
+  background-color: khaki;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container4 {
+  display: grid;
+  grid-template-columns: 1fr 100px 2fr; 
+  grid-template-rows: 1fr 100px;
+}
+
+.grid-container4 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container5 {
+  display: grid;
+  grid-template-columns: repeat(3, auto); 
+  grid-template-rows: 1fr 1fr;
+}
+
+.grid-container5 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container6 {
+  display: grid;
+  grid-template-columns: repeat(3, 150px); 
+  grid-template-rows: repeat(3, 150px);
+}
+
+.grid-container6 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+/*
+  grid-column: shorthand para grid-column-start y grid-column-end
+  grid-row: shorthand para grid-row-start y grid-row-end
+*/
+.grid-container6 #item-1{
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+
+.grid-container7 {
+  display: grid;
+  grid-template-columns: repeat(2, 150px) 300px; 
+  grid-template-rows: repeat(2, 150px);
+  border: red 1px solid;
+}
+
+.grid-container7 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container8 {
+  display: inline-grid;
+  grid-template-columns: repeat(2, 150px) 300px; 
+  grid-template-rows: repeat(2, 150px);
+  border: red 1px solid;
+}
+
+.grid-container8 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container9 {
+  display: grid;
+  grid-template-columns: repeat(2, 150px) 300px; 
+  grid-template-rows: repeat(2, 150px);
+  border: red 1px solid;
+  grid-auto-flow: row;
+}
+
+.grid-container9 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container10 {
+  display: grid;
+  grid-template-columns: repeat(2, 150px) 300px; 
+  grid-template-rows: repeat(2, 150px);
+  border: red 1px solid;
+  grid-auto-flow: column;
+}
+
+.grid-container10 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container11 {
+  display: grid;
+  grid-template-columns: repeat(2, 150px) 300px; 
+  border: red 1px solid;
+  grid-auto-flow: row;
+  grid-auto-rows: 150px; /*Crea nuevas filas automáticamente pero del valor marcado. Puede ser "auto". */
+}
+
+.grid-container11 div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-areas {
+  display: inline-grid;
+  border: darkmagenta 4px solid;
+  height: 100%;
+  grid-template-columns: repeat(4, 100px); 
+  grid-auto-flow: row;
+  grid-auto-rows: 100px;
+}
+
+.grid-areas header{
+  background-color: orange;
+  grid-column: 1 / 5;
+}
+
+.grid-areas main{
+  background-color: grey;
+  grid-column: 3 / 5;
+  grid-row: 2 / 3;
+}
+
+.grid-areas nav{
+  background-color: yellow;
+  grid-column: 1 / 2;
+}
+
+.grid-areas footer{
+  background-color: green;
+  grid-column: 1 / 5;
+}
+
+
+.grid-areas1 {
+  display: inline-grid;
+  border: darkmagenta 4px solid;
+  height: 100%;
+  grid-template-columns: repeat(4, 100px); 
+  grid-auto-flow: row;
+  grid-auto-rows: 100px;
+  grid-template-areas: 
+    "header header header header"
+    "nav . main main"
+    "footer footer footer footer";
+}
+
+.grid-areas1 header{
+  background-color: orange;
+  grid-area: header
+}
+
+.grid-areas1 main{
+  background-color: grey;
+  grid-area: main;
+}
+
+.grid-areas1 nav{
+  background-color: yellow;
+  grid-area: nav;
+}
+
+.grid-areas1 footer{
+  background-color: green;
+  grid-area: footer;
+}
+
+.grid-gap {
+  display: inline-grid;
+  grid-template-columns: repeat(3, 150px); 
+  border: red 1px solid;
+  grid-auto-flow: row;
+  grid-auto-rows: 150px;
+  gap: 10px 30px;
+}
+
+.grid-gap div{
+  border: 1px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid1 {
+  width: 100%;
+  height: 250px;
+  display: inline-grid;
+  grid-template: repeat(2, 1fr) / repeat(3, 1fr); 
+  border: red 2px solid;
+  gap: 10px 30px;
+  justify-items: center;
+}
+
+.grid1 div{
+  border: 2px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid2 {
+  width: 100%;
+  height: 250px;
+  display: inline-grid;
+  grid-template: repeat(2, 1fr) / repeat(3, 1fr); 
+  border: red 2px solid;
+  gap: 10px 30px;
+  justify-items: center;
+}
+
+.grid2 div{
+  border: 2px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid2 #id{
+  align-self: end;
+}
+
+.grid3 {
+  width: 100%;
+  height: 250px;
+  display: inline-grid;
+  grid-template: repeat(2, 1fr) / repeat(3, 1fr); 
+  border: red 2px solid;
+  gap: 10px 30px;
+  /* justify-items: center; */
+  place-items: center end /*align-items | justify-items*/
+}
+
+.grid3 div{
+  border: 2px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid3 #id{
+  align-self: start;
+}
+
+.grid4 {
+  width: 100%;
+  height: 250px;
+  display: inline-grid;
+  grid-template: repeat(2, 50px) / repeat(3, 50px); 
+  border: red 2px solid;
+  gap: 10px 30px;
+  place-items: center end /*align-items | justify-items*/;
+  justify-content: start 
+}
+
+.grid4 div{
+  border: 2px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid5 {
+  width: 100%;
+  height: 250px;
+  display: inline-grid;
+  grid-template: repeat(2, 50px) / repeat(3, 50px); 
+  border: red 2px solid;
+  gap: 10px 30px;
+  place-items: center end /*align-items | justify-items*/;
+  place-content: end center /*align-content | justify-content*/ 
+}
+
+.grid5 div{
+  border: 2px solid darkblue;
+  background-color: lightblue;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
