Align code with documentation.

--- a/module-1-layout/lab/Basic/Ex-2/mystyle.scss
+++ b/module-1-layout/lab/Basic/Ex-2/mystyle.scss
@@ -1,5 +1,5 @@
-// @use "_base-red.scss" as base;
-@use "_base-blue.scss" as base;
+@use "_base-red.scss" as base;
+// @use "_base-blue.scss" as base;
 
 body {
   font-family: Arial, sans-serif;
