--- a/module-1-layout/lab/Basic/Ex-2/_base-red.scss
+++ b/module-1-layout/lab/Basic/Ex-2/_base-red.scss
@@ -1,16 +1,16 @@
-// Colors
+/**********   COLORS   **********/
+
 $colors: (
     base: red,
     important: darkred,
     warning: pink,
 );
 
-// Values
-$borderRadius: 0px;
+/**********   VALUES   **********/
 
-// Fonts
+$borderRadius: 0px;
+$horizontalShadow: -6px;
+
+/**********   FONTS   **********/
 $principalFont: Courier, monospace;
 $secondaryFont: Times, serif;
-
-// Shadow
-$horizontalShadow: -6px;
