--- a/module-1-layout/lab/advanced/_mixins.scss
+++ b/module-1-layout/lab/advanced/_mixins.scss
@@ -1,1 +1,13 @@
 @use "_base.scss" as base;
+
+@mixin flexAlignItemCenterRow() {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+@mixin flexJustifyContentCenterRow() {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
