--- a/module-1-layout/lab/advanced/mystyle.scss
+++ b/module-1-layout/lab/advanced/mystyle.scss
@@ -12,21 +12,18 @@ body {
 
   & header {
     background-color: base.$backgroundColor;
-    display: flex;
-    flex-direction: row;
+    @include mixins.flexAlignItemCenterRow();
     justify-content: space-between;
     position: sticky;
-    top: 0px;
-    padding: 25px 0px;
+    top: base.$defaultStickyTopPx;
+    padding: base.$paddingTopBottom;
 
     & .header-logo {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+      @include mixins.flexAlignItemCenterRow();
 
       & .platform-title {
         font-size: base.$fontSizeTitle;
-        padding-left: 10px;
+        padding-left: base.$platformTitlePaddingLeft;
 
         @media (width < base.$breakpointDesktop) {
           display: none;
@@ -37,13 +34,13 @@ body {
     & .header-buttons {
       display: flex;
       flex-direction: row;
-      gap: 30px;
+      gap: base.$bigGap;
 
       & div {
-        padding: 10px;
-        transition: background-color 0.3s ease, color 0.3s ease,
-          padding 0.3s ease;
-        border-radius: 5px;
+        padding: base.$basePadding;
+        transition: background-color base.$transitionTime ease,
+          color base.$transitionTime ease, padding base.$transitionTime ease;
+        border-radius: base.$buttonBorderRadius;
 
         &:hover {
           background-color: base.$textColor;
@@ -64,70 +61,61 @@ body {
   }
 
   .top {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
+    @include mixins.flexJustifyContentCenterRow();
+    gap: base.$baseGap;
 
-    @media screen and (width < base.$breakpointDesktop) {
+    @media screen and (width <= base.$breakpointTabletMobile) {
       flex-wrap: wrap;
     }
   }
 
   .top-item {
     img {
-      width: 100%;
-      min-width: 225px;
+      width: base.$fullWidth;
+      min-width: base.$minWidthTop;
     }
 
-    @for $i from 1 through 5 {
+    @for $i from 1 through base.$topItemsNumber {
       &:nth-child(#{$i}) {
-        order: #{5 - $i};
+        order: #{base.$topItemsNumber - $i};
       }
     }
 
     @media screen and (width < base.$breakpointDesktop) {
-      @for $i from 1 through 2 {
+      @for $i from 1 through base.$topItemsToBeRemoved {
         &:nth-child(#{$i}) {
           display: none;
         }
       }
     }
   }
-
-  @media screen and (width < base.$breakpointMobile) {
-    flex-direction: column;
-  }
 }
 
 .section-title {
-  padding-top: 40px;
-  padding-bottom: 10px;
+  padding: base.$sectionPaddingTopBottom;
 }
 
 .first,
 .second {
-  display: flex;
-  flex-direction: row;
+  @include mixins.flexJustifyContentCenterRow();
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
+  gap: base.$baseGap;
 
   .item {
     display: flex;
     flex-grow: 1;
+    flex-basis: calc(base.$fullWidth / initialRestItemsPerRow - base.$baseGap);
 
     img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      min-width: 250px;
+      width: base.$fullWidth;
+      height: auto;
+      min-width: base.$minWidthRest;
     }
   }
 }
 
 .first img:hover,
 .second img:hover {
-  transition: transform 0.3s ease;
+  transition: transform base.$transitionTime ease;
   transform: scale(1.1);
 }
